# telegram-review-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
bot/: __init__.py  __main__.py  config.py  states.py  web.py
bot/handlers/: __init__.py  admin.py  commands.py  feedback.py  fsm.py  media.py  text.py  utils.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/services/: __init__.py  backend_client.py
tests/bot/: test_backend_client.py  test_formatting.py  test_fsm.py
