[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-review-bot"
version = "0.1.0"
description = "Telegram interface for an AI PR-review assistant backend"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiogram>=3.20.0,<4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
